<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputCalcActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvInputCalcTitle"
        android:text="@string/calculator"
        android:textSize="15pt"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtInputCalcN1"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/tvInputCalcTitle"
        android:layout_marginTop="90dp"
        android:hint="@string/enter_number1"
        android:inputType="number"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtInputCalcN2"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/edtInputCalcN1"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_number_2"
        android:inputType="number"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnInputCalcAdd"
        android:text="@string/add"
        android:layout_below="@id/edtInputCalcN2"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>











