<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center_vertical"
        android:id="@+id/linearHomeHeader"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHomeUserName"
            android:text="ROYAL"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12pt"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvHomeCredits"
            android:text="500"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12pt"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearHomeHeader"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="150dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/btnHomePlay"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            android:id="@+id/btnHomeLeaderboard"
            android:layout_marginTop="20dp"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:id="@+id/btnHomeLogout"
            android:layout_marginTop="20dp"
            />



    </LinearLayout>

</RelativeLayout>