<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLoginTitle"
        android:text="@string/login"
        android:textSize="22pt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtLoginEmail"
        android:layout_below="@id/tvLoginTitle"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_email"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtLoginPassword"
        android:inputType="textPassword"
        android:layout_below="@id/edtLoginEmail"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_password"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLoginButton"
        android:text="@string/login"
        android:layout_below="@id/edtLoginPassword"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLoginShowEmail"
        android:layout_below="@id/btnLoginButton"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLoginShowPassword"
        android:layout_below="@id/tvLoginShowEmail"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        />





</RelativeLayout>